Adding Extensions to reduce size of startup class , added jwt token,

--- a/DatingApp/appsettings.json
+++ b/DatingApp/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=(LocalDb)\\MSSQLLocalDB;database=DatingDB;Trusted_Connection=true"
   },
+  "TokenKey": "This is my secret key",
 
   "Logging": {
     "LogLevel": {
