--- a/DatingApp/appsettings.json
+++ b/DatingApp/appsettings.json
@@ -11,5 +11,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "CloudinarySettings": {
+    "CloudName": "duklimaeu",
+    "ApiKey": "832761638947722",
+    "ApiSecret": "gvpDKZTGCBDEMCjhUf6Ie-20B84"
+  },
   "AllowedHosts": "*"
 }
